argocd/base-careerdex/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: careerdex
  labels:
    app: careerdex
spec:
  type: ClusterIP
  ports:
    - port: 8788
      targetPort: 8788
      protocol: TCP
      name: backend
    - port: 7861
      targetPort: 7861
      protocol: TCP
      name: frontend
  selector:
    app: careerdex
